--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
-/*.flex{
+.flex{
     background-color: black;
-}*/
+}
+*{
+    text-align: center;
+}
 .container1{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .container2{
@@ -23,7 +26,7 @@
 .learn, 
 .empty {
     border: 2px solid black;
-    width: 574px;
+    width: 100%;
     background-color: lightgreen;
     font-size: 50px;
 }
@@ -31,11 +34,11 @@
 .uniq {
     border: 2px solid black;
     background-color: lightblue;
+    -webkit-text-stroke: 4px black; /*outline text in black*/
     color: white;
-    font-size: 100px;
+    font-size: 130px;
     font-weight: bold;
-    text-align: center;
-    width: 1148px;
+    width: 100%; /*setting widht to 100% make the box fit on all the page*/
 
 }
 
@@ -44,9 +47,21 @@
 .mn {
     border: 2px solid black;
     width: 200px;
-    height: 45px;
     background-color: lightgreen;
 }
 .fif{
     background-color: lightblue;
+    font-size: 130px;
+    -webkit-text-stroke: 4px black; /*outline text in black*/
+    color: white;
+    font-weight: bold;
+}
+.mn {
+    width: 100%;
+}
+.learn,
+.in,
+.mn {
+    -webkit-text-stroke: 1px white; /*outline text in black*/
+    font-size: 75px;
 }
