--- a/styles.css
+++ b/styles.css
@@ -1,51 +1,71 @@
-.flex{
-    background-color: black;
-}
 *{
-    text-align: center;
+    text-align: center; /*center all text in the page*/
+    box-sizing: border-box; /*set automatically box size to match actual size in inspect*/
 }
+
+/*.flex{
+    background-color: black;
+}does the same as the containeri chaining selector below*/ 
+
+
+/*creating flexbox display and setting some properties*/
+.container1,
+.container2,
+.container3 {
+    background-color: black;
+    display: flex;
+} 
+
+.container4{
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    margin: 5px;
+}
+
+
+/*
+
 .container1{
     display: flex;
-    justify-content: space-evenly;
 }
-
 .container2{
-    display: flex;
-    justify-content: space-around;
-    
+    display: flex;  
 }
-
 .container3{
     display: flex;
+}*/
 
-}
+
+/*create 5px margin between all boxes and applying 2px border with fitem class. */
 .fitem{
-    margin: 10px;
+    margin: 5px; 
+    border: 2px solid black;
 }
 
+/*setting properties for 1st container element */
 .learn, 
-.empty {
-    border: 2px solid black;
+.empty{
+
     width: 100%;
     background-color: lightgreen;
-    font-size: 50px;
+    font-size: 130px;
 }
 
+/*setting properties for 2nd container element */
 .uniq {
-    border: 2px solid black;
+ 
     background-color: lightblue;
-    -webkit-text-stroke: 4px black; /*outline text in black*/
+   -webkit-text-stroke: 4px black; /*outline text in black*/
     color: white;
-    font-size: 130px;
+    font-size: 160px;
     font-weight: bold;
     width: 100%; /*setting widht to 100% make the box fit on all the page*/
-
 }
 
 .in, 
 .fif,
 .mn {
-    border: 2px solid black;
     width: 200px;
     background-color: lightgreen;
 }
@@ -61,7 +81,25 @@
 }
 .learn,
 .in,
-.mn {
+.mn,
+.rect {
     -webkit-text-stroke: 1px white; /*outline text in black*/
-    font-size: 75px;
+    font-size: 130px;
+}
+.in{
+    font-size: 130px;
+    width: fit-content;
+}
+
+.rect{
+    background-color: lightslategray;
+
+}
+
+
+.rect2{
+    background-color: gold;
+    color: white;
+    -webkit-text-stroke: 1px black; /*outline text in black*/
+    font-size: 130px;
 }
